# const_fn_assert

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs
tests/: tests.rs
