[package]
name = "const_fn_assert"
version = "0.1.0"
authors = ["Nicolas Poelen"]
edition = "2018"

description = "Assertions for const functions."
license = "MIT"
keywords = ["macro", "assert", "const", "fn", "testing"]
categories = ["no-std", "rust-patterns", "development-tools::testing"]
readme = "README.md"
repository = "https://github.com/powlpy/const_fn_assert"
documentation = "https://docs.rs/const_fn_assert"

exclude = [
    ".travis.yml"
]

[badges]
travis-ci = { repository = "powlpy/const_fn_assert" }
